--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,7 @@
 	<div id="main" class="tab-pane active show" role="tabpanel">
 	  <div class="row">
 	    <div class="col-7">
+	      <select class="form-control" id="cartoon_selector"></select>
 	      <svg width="758" height="400" id="cartoon"></svg>
 	      <svg width="600" height="400" id="movie"></svg>
 	      <div class="form-group">
@@ -201,14 +202,18 @@
      function add_radio(d) {
 	 var row=d3.select(this);
 	 var options = d.value.Unit.split("|");
-	 var buttons=row.selectAll("input").data(options);
+	 var buttons=row.selectAll("span").data(options);
 	 buttons.exit().remove();
-	 buttons.enter()
-		.append("input").attr("type","radio")
-		.merge(buttons)
-		.text(I);
+	 var b=buttons.enter()
+		      .append("span").attr("class","col-form-label")
+		      .merge(buttons);
+	 b.append("input").attr("type","radio")
+	  .attr("name", d.key)
+	  .property("checked", (dat,i) => i==d.value.Value)
+	  .attr("value",(d,i) => i);
+	 b.append("span").text(I);
+	 row.selectAll("input").on("change", function(dat,i) {d.value.Value = i;})
 	 }
-	 
      function show_form(node, data) {
 	 var rows = node.selectAll('div')
 			.data(data, d => d.key)
@@ -219,11 +224,11 @@
 	     .style("text-align","right")
 	     .text(d => d.key);
 	 rows.filter(d => d.value.Unit.includes("|")).each(add_radio);
-	 rows.append("input")
+	 rows.filter(d => !d.value.Unit.includes("|")).append("input")
 	     .attr("class", "form-control col-sm-4")
 	     .attr("value", d=>d.value.Value)
 	     .on("input", function(d,i){d.value.Value=+this.value;});
-	 rows.append("span")
+	 rows.filter(d => !d.value.Unit.includes("|")).append("span")
 	     .text(d=> d.value.Unit);
      }
      function recalculate() {
@@ -433,6 +438,12 @@
 	 if (typeof anim !== "undefined") {
 	     anim_data=anim;
 	     if (anim.hasOwnProperty('cartoons')) {
+		 var opts = d3.select("#cartoon_selector").selectAll("option").data(keys(anim.cartoons));
+		 opts.exit().remove();
+		 opts.enter().append("option")
+		 .merge(opts)
+		 .attr("value", I).text(I);
+		 d3.select("#cartoon_selector").on("change", function(d) {load_cartoon(anim.cartoons[this.value]);});
 		 load_cartoon(anim.cartoons[anim_data["scenarios"][0].name.Value]);
 	     } else {
 		 d3.json("test.json").then(load_cartoon);
