Remove pages from html side as well

--- a/www/index.html
+++ b/www/index.html
@@ -100,7 +100,8 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="pages.js"></script>
     <script>
-     Pages.start(window.location.href);
+     /* Pages.start(window.location.href); */
+     var Pages={id:"no-id-ea"};
      var cartoon = d3.select("#cartoon"),
 	 cartoon_width = +cartoon.attr("width");
      var n_iter=100;
